[package]
name = "zephyrj-ac-tools"
version = "0.4.5-alpha"
edition = "2021"

authors = ["zephyrj <zephyrj@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.2"
thiserror = "1.0.51"
itertools = "0.13.0"
csv = "1.3.0"
indexmap = "2.6.0"
fs_extra = "1.3.0"
walkdir = "2.5.0"
ndarray = "0.16.1"
rand = "0.8.5"
plotters = "0.3"
plotters-piston = "0.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
directories = "5.0.1"
